Fix style for images on small displays

--- a/assets/css/extended/figure.css
+++ b/assets/css/extended/figure.css
@@ -7,5 +7,6 @@ figure img {
 @media screen and (max-width: 768px) {
     figure img {
         max-height: unset;
+        width: 100%;
     }
 }
